mirror/istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mirror-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mirror-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - default/mirror-gateway
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: mirror
        port:
          number: 80
        subset: v1

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mirror-destinationrule
spec:
  host: mirror
  subsets:
  - name: v1
    labels:
      version: v1
